<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/card_shadow"
    tools:context=".ui.home.common.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/ic_home_header"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/height_120"
        android:layout_height="@dimen/height_120"
        android:src="@drawable/inner"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.446" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginLeft="@dimen/padding_10"
        android:layout_marginTop="18dp"
        android:text="@string/name"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/text_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tmp_name"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/padding_10"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:layout_marginLeft="10dp" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#D3D3D3"
        app:layout_constraintStart_toStartOf="@+id/text_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_name" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginLeft="@dimen/padding_10"
        android:layout_marginTop="12dp"
        android:text="@string/hint_email"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/text_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tmp_email"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginLeft="10dp" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#D3D3D3"
        app:layout_constraintStart_toStartOf="@+id/text_profile_email"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_email" />

    <ImageView
        android:layout_marginTop="15dp"
        android:id="@+id/imageView4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_phone2"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginLeft="@dimen/padding_10"
        android:layout_marginTop="14dp"
        android:text="@string/tmp_phone"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/text_profile_phone"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/padding_10"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginLeft="10dp" />

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#D3D3D3"
        app:layout_constraintStart_toStartOf="@+id/text_profile_phone"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_phone" />

    <ImageView
        android:layout_marginTop="15dp"
        android:id="@+id/imageView5"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_card"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginLeft="@dimen/padding_10"
        android:layout_marginTop="13dp"
        android:text="@string/cnic_name"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/text_profile_cnic"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cnic"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginLeft="@dimen/padding_10" />

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#D3D3D3"
        app:layout_constraintStart_toStartOf="@+id/text_profile_cnic"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_cnic" />

    <ImageView
        android:layout_marginTop="15dp"
        android:id="@+id/imageView6"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginLeft="@dimen/padding_10"
        android:layout_marginTop="13dp"
        android:text="@string/location_name"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/text_profile_location"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_width="123dp"
        android:layout_height="21dp"
        android:text="@string/location"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:layout_marginLeft="@dimen/padding_10" />



</androidx.constraintlayout.widget.ConstraintLayout>