<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/ic_home_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_email_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edt_email_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_50"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="@dimen/padding_5"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/edt_password_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_50"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="@dimen/padding_5"
        android:hint="@string/hint_passwrd"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_login"
        app:layout_constraintVertical_bias="0.32" />

</androidx.constraintlayout.widget.ConstraintLayout>